--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -512,16 +512,7 @@
     "plt.imshow(gray_image_np)\n",
     "plt.axis('off')\n",
     "plt.title(\"Skeletonized Image\")\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "# train_dataset = BloodMNIST(\n",
-    "#     root='./datasets/', split='train', download=True, transform=transform)\n",
-    "# val_dataset = BloodMNIST(root='./datasets/', split='val',\n",
-    "#                          download=True, transform=transform)\n",
-    "# test_dataset = BloodMNIST(root='./datasets/', split='test',\n",
-    "#                           download=True, transform=transform)"
+    "plt.show()"
    ]
   },
   {
